--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,1 +1,5 @@
-<p>nav works!</p>
+<nav class="navbar-dark bg-dark expand-sm mb-3">
+  <div class="container">
+    <a href="/" class="navbar-brand">Quotes Factory</a>
+  </div>
+</nav>
