--- a/src/app/components/quotes-form/quotes-form.component.html
+++ b/src/app/components/quotes-form/quotes-form.component.html
@@ -1,1 +1,21 @@
-<p>quotes-form works!</p>
+<div class="narrow">
+  <form>
+    <div class="form-group">
+      <label for="author">Author</label>
+      <input type="text" class="form-control" name="author" #author>
+    </div>
+    <div class="form-group">
+      <label for="qoute_input">Quote</label>
+      <textarea type="text" class="form-control" rows="4" name="qoute_input" #quote_input></textarea>
+    </div>
+    <div class="form-group">
+      <label for="date_input">Date</label>
+      <input type="date" class="form-control" name="date_input" #date_input>
+    </div>
+    <div class="form-group">
+      <label for="user_submit">Submitted By</label>
+      <input type="text" class="form-control" name="user_submit" #user_submit>
+    </div>
+    <button class="btn btn-lg-primary btn-block">Submit Quote</button>
+  </form>
+</div>
