add a dummy header to represent the user and a toogle button for the quote

--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -1,1 +1,9 @@
 <app-quotes-form></app-quotes-form>
+
+<div class="mb-2">
+  <header>
+    <h2>Sunday</h2>
+    <small><button class="btn btn-sm-dark">Toggle Quote</button></small>
+  </header>
+
+</div>
