--- a/src/app/components/quotes-form/quotes-form.component.html
+++ b/src/app/components/quotes-form/quotes-form.component.html
@@ -16,6 +16,6 @@
       <label for="user_submit">Submitted By</label>
       <input type="text" class="form-control" name="user_submit" #user_submit>
     </div>
-    <button class="btn btn-lg-primary btn-block">Submit Quote</button>
+    <button class="btn btn-primary btn-block">Submit Quote</button>
   </form>
 </div>
