add placeholder markup for the goal details html

--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -1,9 +1,10 @@
 <app-quotes-form></app-quotes-form>
 
-<div class="mb-2">
-  <header>
+<div class="container">
+  <header class="mb-2">
     <h2>Sunday</h2>
-    <small><button class="btn btn-sm-dark">Toggle Quote</button></small>
+    <small><button class="btn btn-sm btn-dark">Toggle Quote <span><i
+            class="fa fa-caret-right"></i></span></button></small>
   </header>
-
+  <app-quotes-details></app-quotes-details>
 </div>
