--- a/src/app/components/quotes-details/quotes-details.component.html
+++ b/src/app/components/quotes-details/quotes-details.component.html
@@ -1,1 +1,21 @@
-<p>quotes-details works!</p>
+<div class="card bg-light">
+  <img src="https://lorempixel.com/400/200/people/3" alt="" class="card-img-top img-fluid">
+  <div class="card-body">
+    <h4 class="card-title"> John NewMann</h4>
+    <p class="card-text">
+      <i class="fa fa-quote-left"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
+      laudantium placeat, necessitatibus voluptatem in eius porro hic corrupti fuga modi, similique enim tenetur facilis
+      explicabo? Amet, iure reiciendis. Odit, voluptatem?
+    </p>
+    <div class="buttons">
+      <div id="votes">
+        <i class="fa fa-thumbs-o-up"></i>
+        <i class="fa fa-thumbs-o-down"></i>
+      </div>
+      <div id="delete">
+        <i class="fa fa-times"></i>
+      </div>
+    </div>
+
+  </div>
+</div>
