add initial markup for the qoutes factory app

--- a/src/app/components/quotes-form/quotes-form.component.html
+++ b/src/app/components/quotes-form/quotes-form.component.html
@@ -1,4 +1,5 @@
 <div class="narrow mb-4">
+  <button class="btn btn-sm btn-dark mb-2">Add Quote</button>
   <form>
     <div class="form-group">
       <label for="author">Author</label>
