fix spelling for the wromg spelling for the input quote in quote details ts file

--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -6,10 +6,12 @@
       <h2>{{quote.user}}</h2>
       <small>
         <button class="btn btn-sm btn-dark" (click)="showQuote(i)">
-          Toggle Quote <span><i class="fa fa-caret-right"></i></span></button>
+          Toggle Quote <span><i class="fa fa-caret-right"></i></span>
+        </button>
       </small>
     </header>
-    <app-quotes-details *ngIf="quote.showDescription"></app-quotes-details>
+
+    <app-quotes-details *ngIf="quote.showDescription" [quote]="quote"></app-quotes-details>
   </div>
 
 </section>
