--- a/src/app/components/quotes-details/quotes-details.component.html
+++ b/src/app/components/quotes-details/quotes-details.component.html
@@ -1,18 +1,17 @@
 <div class="card bg-light">
-  <img src="https://lorempixel.com/400/200/people/3" alt="" class="card-img-top img-fluid">
+  <!-- <img src="https://lorempixel.com/400/200/people/3" alt="" class="card-img-top img-fluid"> -->
   <div class="card-body">
     <p class="card-text">
-      <i class="fa fa-quote-left"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
-      laudantium placeat, necessitatibus voluptatem in eius porro hic corrupti fuga modi, similique enim tenetur facilis
-      explicabo? Amet, iure reiciendis. Odit, voluptatem?
+      <i class="fa fa-quote-left"></i>
+      {{quote._quote}}
     </p>
     <hr class="hr-line">
 
-    <h4 class="card-title"> John NewMann</h4>
+    <h4 class="card-title">{{quote.author}}</h4>
     <div class="buttons">
       <div id="votes">
-        <i class="fa fa-thumbs-o-up"></i>
-        <i class="fa fa-thumbs-o-down"></i>
+        <i class="fa fa-thumbs-o-up">{{quote.upvote}}</i>
+        <i class="fa fa-thumbs-o-down">{{quote.downvote}}</i>
       </div>
       <div id="delete">
         <i class="fa fa-times"></i>
