add some styling to the buttons to work with them

--- a/src/app/components/quotes-details/quotes-details.component.html
+++ b/src/app/components/quotes-details/quotes-details.component.html
@@ -10,11 +10,11 @@
     <h4 class="card-title">{{quote.author}}</h4>
     <div class="buttons">
       <div id="votes">
-        <i class="fa fa-thumbs-o-up">{{quote.upvote}}</i>
-        <i class="fa fa-thumbs-o-down">{{quote.downvote}}</i>
+        <button class="btn"><i class="fa fa-thumbs-o-up"></i>{{quote.upvote}}</button>
+        <button class="btn"> <i class="fa fa-thumbs-o-down"></i>{{quote.downvote}}</button>
       </div>
       <div id="delete">
-        <i class="fa fa-times"></i>
+        <button class="btn"><i class="fa fa-times"></i></button>
       </div>
     </div>
 
