add the delete function to delete a quote

--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -11,7 +11,8 @@
       </small>
     </header>
 
-    <app-quotes-details *ngIf="quote.showDescription" [quote]="quote" (likeIsClicked)="onLikeClicked($event,i)">
+    <app-quotes-details *ngIf="quote.showDescription" [quote]="quote" (likeIsClicked)="onLikeClicked($event,i)"
+      (dislikeIsClicked)="onDislikeClicked($event,i)" (deleteIsClicked)="onDelete($event,i)">
     </app-quotes-details>
   </div>
 
