--- a/src/app/components/quotes-details/quotes-details.component.html
+++ b/src/app/components/quotes-details/quotes-details.component.html
@@ -11,10 +11,11 @@
     <div class="buttons">
       <div id="votes">
         <button class="btn" (click)="likeClicked(true)"><i class="fa fa-thumbs-o-up"></i>{{quote.upvote}}</button>
-        <button class="btn"> <i class="fa fa-thumbs-o-down"></i>{{quote.downvote}}</button>
+        <button class="btn" (click)="dislikeClicked(true)"> <i
+            class="fa fa-thumbs-o-down"></i>{{quote.downvote}}</button>
       </div>
       <div id="delete">
-        <button class="btn"><i class="fa fa-times"></i></button>
+        <button class="btn" (click)="deleteQuote(true)"><i class="fa fa-times"></i></button>
       </div>
     </div>
 
