add the addQuote method to add the new quote in the array

--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -1,4 +1,4 @@
-<app-quotes-form></app-quotes-form>
+<app-quotes-form (addQuote)="onAddQuote($event)"></app-quotes-form>
 
 <section class="container">
   <div *ngFor="let quote of quotes; let i = index">
