refactored the qoute form html to look a little nicer

--- a/src/app/components/quotes-details/quotes-details.component.html
+++ b/src/app/components/quotes-details/quotes-details.component.html
@@ -1,4 +1,4 @@
-<div class="card bg-light">
+<div appMostliked class="card ">
   <!-- <img src="https://lorempixel.com/400/200/people/3" alt="" class="card-img-top img-fluid"> -->
   <div class="card-body">
     <p class="card-text">
