--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -1,15 +1,19 @@
-<app-quotes-form (addQuote)="onAddQuote($event)"></app-quotes-form>
-
 <section class="container">
+  <app-quotes-form (addQuote)="onAddQuote($event)"></app-quotes-form>
+
+
   <div *ngFor="let quote of quotes; let i = index">
-    <header class="mb-2">
-      <h2>{{quote.user}}</h2>
-      <small>
-        <button class="btn btn-sm btn-dark" (click)="showQuote(i)">
-          Toggle Quote <span><i class="fa fa-caret-right"></i></span>
+    <ul class="list-unstyled list-group ">
+      <li class="list-group-item d-flex justify-content-between align-items-center mb-2">
+        <a href="/">Quote Submitted by:{{quote.user}}</a>
+        <span class="log-date">Submitted:{{quote.date | date}}</span>
+        <button class="btn btn-sm btn-success" (click)="showQuote(i)">
+          Show Quote
+          <span><i class="fa fa-caret-right"></i></span>
         </button>
-      </small>
-    </header>
+      </li>
+
+    </ul>
 
     <app-quotes-details *ngIf="quote.showDescription" [quote]="quote" (likeIsClicked)="onLikeClicked($event,i)"
       (dislikeIsClicked)="onDislikeClicked($event,i)" (deleteIsClicked)="onDelete($event,i)">
