--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -7,9 +7,8 @@
       <li class="list-group-item d-flex justify-content-between align-items-center mb-2">
         <a href="/">Quote Submitted by:{{quote.user}}</a>
         <span class="log-date">Submitted:{{quote.date | date}}</span>
-        <button class="btn btn-sm btn-success" (click)="showQuote(i)">
-          Show Quote
-          <span><i class="fa fa-caret-right"></i></span>
+        <button class="btn btn-sm btn-dark" (click)="showQuote(i)">
+          <i [ngClass]="quote.showDescription ? 'fa fa-minus':'fa fa-plus' "></i>
         </button>
       </li>
 
