used ngClass to change the icon for the Add New Quote button to hide and unhide the form

--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -4,7 +4,7 @@
 
   <div *ngFor="let quote of quotes; let i = index">
     <ul class="list-unstyled list-group ">
-      <li class="list-group-item d-flex justify-content-between align-items-center mb-2">
+      <li class="list-group-item d-flex justify-content-between align-items-center">
         <a href="/">Quote Submitted by:{{quote.user}}</a>
         <span class="log-date">Submitted:{{quote.date | date}}</span>
         <button class="btn btn-sm btn-dark" (click)="showQuote(i)">
