fix the qoute html markup for the card top to

--- a/src/app/components/quotes-details/quotes-details.component.html
+++ b/src/app/components/quotes-details/quotes-details.component.html
@@ -4,6 +4,7 @@
     <p class="card-text">
       <i class="fa fa-quote-left"></i>
       {{quote._quote}}
+      <i class="fa fa-quote-right"></i>
     </p>
     <hr class="hr-line">
 
