--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -3,6 +3,40 @@
 
 
   <div *ngFor="let quote of quotes; let i = index">
+    <div class="card card-body">
+      <div class="card-top d-flex justify-content-between align-items-center">
+        <div class="user-info">
+          <h4>New Qoute By:{{quote.user}}</h4>
+          <small>Posted on: {{quote.date}}</small>
+        </div>
+
+        <div class="toggle-btn">
+          <button class="btn btn-sm btn-dark" (click)="showQuote(i)">
+            <i [ngClass]="quote.showDescription ? 'fa fa-minus':'fa fa-plus' "></i>
+          </button>
+        </div>
+      </div><!-- top-card -->
+
+      <div class="card-body">
+        <app-quotes-details *ngIf="quote.showDescription" [quote]="quote" (likeIsClicked)="onLikeClicked($event,i)"
+          (dislikeIsClicked)="onDislikeClicked($event,i)" (deleteIsClicked)="onDelete($event,i)">
+        </app-quotes-details>
+
+      </div>
+      <!--card- -->
+
+
+
+    </div>
+    <!--card- -->
+
+
+
+
+
+
+
+
     <ul class="list-unstyled list-group ">
       <li class="list-group-item d-flex justify-content-between align-items-center">
         <a href="/">Quote Submitted by:{{quote.user}}</a>
@@ -11,7 +45,6 @@
           <i [ngClass]="quote.showDescription ? 'fa fa-minus':'fa fa-plus' "></i>
         </button>
       </li>
-
     </ul>
 
     <app-quotes-details *ngIf="quote.showDescription" [quote]="quote" (likeIsClicked)="onLikeClicked($event,i)"
