add styling to the blockquote of the qoute details to add color to the qoute icons and italisize the cite

--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -6,7 +6,7 @@
     <div class="card">
       <div class="card-header d-flex justify-content-between align-items-center">
         <div class="user-info">
-          <h4>New Qoute By:{{quote.user}}</h4>
+          <h4 class="card-title">New Qoute By:{{quote.user}}</h4>
           <small>Posted on: {{quote.date}}</small>
         </div>
 
