--- a/src/app/components/quotes-form/quotes-form.component.html
+++ b/src/app/components/quotes-form/quotes-form.component.html
@@ -22,14 +22,14 @@
       </div>
     </div>
 
-    <div class="form-group">
+    <!-- <div class="form-group">
       <label for="date_input">Date</label>
       <input type="date" name="date_input" required [ngClass]="{'is-invalid': date_input.errors && date_input.touched}"
         [(ngModel)]="newQuote.date" #date_input='ngModel' class="form-control">
       <div class="invalid-feedback" [hidden]="!date_input.errors?.required">
         <p>Date is Required</p>
       </div>
-    </div>
+    </div> -->
 
 
     <div class="form-group">
