--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -4,20 +4,20 @@
 
   <div *ngFor="let quote of quotes; let i = index" class="mb-2">
     <div class="card">
-      <div class="card-header d-flex justify-content-between align-items-center">
+      <div class="card-header d-flex justify-content-between align-items-center" (click)="showQuote(i)">
         <div class="user-info">
           <h4 class="card-title">Submitted By:{{quote.user | titlecase}}</h4>
           <small>{{quote.date | date:'mediumDate'}}:{{quote.date | timeAgo}}</small>
         </div>
 
         <div class="toggle-btn">
-          <button class="btn btn-sm btn-dark" (click)="showQuote(i)">
+          <button class="btn btn-sm btn-dark">
             <i [ngClass]="quote.showDescription ? 'fa fa-minus':'fa fa-plus' "></i>
           </button>
         </div>
       </div><!-- card-header -->
 
-      <app-quotes-details *ngIf="quote.showDescription" [quote]="quote" (likeIsClicked)="onLikeClicked($event,i)"
+      <app-quotes-details [quote]="quote" *ngIf="quote.showDescription" (likeIsClicked)="onLikeClicked($event,i)"
         (dislikeIsClicked)="onDislikeClicked($event,i)" (deleteIsClicked)="onDelete($event,i)">
       </app-quotes-details>
 
