--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  background: #cfeed1 !important;
+  background: #CFEED1 !important;
   font-family: 'IBM Plex Mono', sans-serif;
 }
 
