--- a/src/app/components/quotes-form/quotes-form.component.html
+++ b/src/app/components/quotes-form/quotes-form.component.html
@@ -1,9 +1,8 @@
-<div class="mb-4">
-  <button class="btn btn-sm btn-dark mb-2" (click)="this.showForm = !this.showForm">Add New Quote
-    <i [ngClass]="!this.showForm ? 'fa fa-plus': 'fa fa-minus'"></i>
-  </button>
-  <form *ngIf="showForm" (ngSubmit)="submitQuote(quoteForm)" #quoteForm="ngForm">
-
+<button class="btn btn-sm btn-dark mb-2" (click)="this.showForm = !this.showForm">Add New Quote
+  <i [ngClass]="!this.showForm ? 'fa fa-plus': 'fa fa-minus'"></i>
+</button>
+<div class="card card-body mb-4" *ngIf="showForm">
+  <form (ngSubmit)="submitQuote(quoteForm)" #quoteForm="ngForm">
     <div class="form-group">
       <label for="author_input">Author</label>
       <input type="text" name="author_input" [ngClass]="{'is-invalid': author_input.errors && author_input.touched}"
@@ -21,17 +20,6 @@
         <p>Quote is Required</p>
       </div>
     </div>
-
-    <!-- <div class="form-group">
-      <label for="date_input">Date</label>
-      <input type="date" name="date_input" required [ngClass]="{'is-invalid': date_input.errors && date_input.touched}"
-        [(ngModel)]="newQuote.date" #date_input='ngModel' class="form-control">
-      <div class="invalid-feedback" [hidden]="!date_input.errors?.required">
-        <p>Date is Required</p>
-      </div>
-    </div> -->
-
-
     <div class="form-group">
       <label for="user_input">Submitted By</label>
       <input type="text" name="user_input" required [ngClass]="{'is-invalid':user_input.errors && user_input.touched}"
