fix the color mismatch qoute details component

--- a/src/app/components/quotes-details/quotes-details.component.html
+++ b/src/app/components/quotes-details/quotes-details.component.html
@@ -7,7 +7,7 @@
       {{quote._quote}}
       <i class="fa fa-quote-right"></i>
     </p>
-    <hr class="hr-line">
+    <hr class="line">
     <cite class="card-title">-{{quote.author}}</cite>
   </blockquote>
 </div>
