--- a/src/app/components/quotes-details/quotes-details.component.css
+++ b/src/app/components/quotes-details/quotes-details.component.css
@@ -1,6 +1,21 @@
-blockquote .fa {
-  padding: 1rem;
-  /* color: #05E0E9; */
+blockquote {
+  padding: 1rem 0;
+
+}
+
+blockquote .fa.fa-quote-left,
+blockquote .fa.fa-quote-right {
+  padding: .6rem;
+}
+
+blockquote i.fa,
+blockquote cite {
+  color: #05E0E9;
+}
+
+hr.line {
+  margin-top: 2rem;
+
 }
 
 .buttons {
@@ -29,13 +44,13 @@ blockquote .fa {
 }
 
 
-
 blockquote cite {
   font-style: italic;
+  font-weight: 500;
 }
 
 .card-footer .fa.fa-thumbs-o-up {
-  color: #05E0E9;
+  color: #4e1a3d;
 }
 
 .card-footer .fa.fa-thumbs-o-down {
