add a footer and footer stylings

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-nav></app-nav>
 <div class="container-fluid">
-  <app-quote></app-quote>
+  <div id="main">
+    <app-quote></app-quote>
+  </div>
 </div>
+<app-footer></app-footer>
